Fix spacing above validation errors

--- a/web/public/css/user.css
+++ b/web/public/css/user.css
@@ -43,6 +43,12 @@ input {
   -webkit-padding-before: 2.5%;
 }
 
+.validation-error {
+  display: inline-block;
+  padding-top: 5px;
+  -webkit-padding-before: 0.5%;
+}
+
 .signup_submit,
 .login_submit {
   display: grid;
